--- a/styles/custom.css
+++ b/styles/custom.css
@@ -37,8 +37,13 @@
   text-align: center;
   color: #ffd527 !important;
   vertical-align: middle;
-  line-height: 10px !important;
   margin-left: 25px;
+	height: auto;
+}
+
+.navbar-nav>li>a {
+	line-height: normal;
+	padding: 10px 15px;
 }
 
 .navbar-default .navbar-nav>li>a.button-buy-ticket:hover {
@@ -50,7 +55,8 @@
 
 .jumbotron {
   background: url(../assets/landing-image.jpg) center / cover no-repeat;
-  padding-top: 0px;
+	box-shadow: inset 0 0 200px 15px #000;
+	padding: 0;
 	min-height: 85vh;
 }
 
@@ -685,19 +691,71 @@
 }
 
 @media screen and (max-width: 767px) {
+	.navbar {
+		height: 50px;
+		position: fixed;
+    top: 0;
+    z-index: 1;
+		background-color: #000;
+	}
   .navbar .nav {
     background: #ffd527;
+		margin: 0;
   }
+	.navbar-collapse {
+		margin-top: 0;
+		padding: 0;
+		border: 0;
+	}
   .navbar-collapse a {
     color: #ffffff !important;
   }
+	.navbar-nav>li>a {
+		line-height: normal;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+	}
+	.navbar-header .navbar-toggle.collapsed .icon-bar {
+		background-color: #ffd527;
+	}
+	.navbar-header .navbar-toggle .icon-bar {
+		background-color: #fff;
+		width: 25px;
+		height: 3px;
+	}
+	.navbar-default .navbar-toggle:focus {
+		background-color: #ffd527;
+	}
+	.navbar-default .navbar-toggle:hover {
+		background-color: transparent;
+	}
+	.navbar-default button.navbar-toggle:not(.collapsed) {
+		border: 0;
+		background-color: #ffd527;
+	}
+	.navbar-toggle.collapsed {
+		border: 0;
+	}
+	.link-container {
+		padding: 10px 40px;
+		box-sizing: border-box;
+	}
   .jschannel-logo {
-    margin-top: 0px !important;
-    margin-left: -15px;
-    display: block;
-    max-width: 100%;
-    height: auto;
+		display: block;
+		position: fixed;
+		top: 0;
+		left: 0;
+		margin-top: 0;
+		height: 50px;
+		z-index: 5;
   }
+	.cfp {
+		margin-top: 120px;
+		width: 150px;
+		background-color: rgba(0, 0, 0, 0.5);
+	}
+	.cfp span {
+		font-size: 20px;
+	}
 	.details-phone {
 		font-size: 16px;
 		padding: 30px;
