--- a/styles/custom.css
+++ b/styles/custom.css
@@ -5,11 +5,10 @@
 .visible {
   display: none !important;
 }
-
 .img-responsive {
-  min-width: 100%;
-  min-height: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  /*max-height: 100%;*/
 }
 
 
