--- a/styles/custom.css
+++ b/styles/custom.css
@@ -53,7 +53,7 @@
 /* Jumbotron Section */
 
 .jumbotron {
-  background: url(../assets/landing-image.jpg) center / cover no-repeat;
+  background: #000 url(../assets/landing-image.jpg) center / cover no-repeat;
 	box-shadow: inset 0 0 200px 15px #000;
 	padding: 0;
 	min-height: 650px;
