--- a/styles/custom.css
+++ b/styles/custom.css
@@ -66,6 +66,10 @@ a:visited {
   height: 100vh;
   max-height: 960px;
   margin-bottom: 0px;
+  transition: height 1000000s ease;
+  -webkit-transition: height 1000000s ease;
+  -moz-transition: height 1000000s ease;
+  -o-transition: height 1000000s ease;
 }
 
 .jschannel-logo {
