--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1113,5 +1113,6 @@ a:visited {
 }
 
 .schedule .tab.active {
-  border: 3px solid #000000;
+  border: 2px solid #ffffff;
+  box-shadow: 0px 1px 1px 1px rgb(255, 255, 255);
 }
