--- a/styles/custom.css
+++ b/styles/custom.css
@@ -810,6 +810,7 @@ a:visited {
 }
 
 .schedule .complete-schedule {
+  visibility: hidden;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   font-weight: normal;
